--- a/assets/view/kako-beach.html
+++ b/assets/view/kako-beach.html
@@ -46,9 +46,10 @@
         <div class="about-beach">
             <div class="about-content-beach">
                 <h2>Découvrez la sérénité et la splendeur du Lac de Sainte-Croix avec nos bateaux électriques, où l'aventure respectueuse de l'environnement rencontre la pure beauté naturelle.</h2>
-                <p>Plongez au cœur de la beauté sereine du Lac de Sainte-Croix, délicatement niché au sein des impressionnantes Gorges du Verdon. Nos bateaux électriques vous invitent à une exploration paisible et respectueuse de l'environnement, vous permettant de naviguer sur des eaux immaculées tout en admirant les paysages exceptionnels, le tout sans perturber l'harmonie naturelle.
                 </p>
                 <p>Soyez prêt(e) à être captivé(e) par les panoramas spectaculaires qui entourent le troisième plus grand lac de France. Les Gorges du Verdon, avec leurs falaises majestueuses et leur végétation luxuriante, offrent un décor à couper le souffle pendant que vous naviguez sur les eaux calmes. N'oubliez pas votre appareil photo – ces vues sont tout simplement trop impressionnantes pour ne pas les capturer.</p>
+                <p>Profitez d'une expérience respectueuse de l'environnement avec nos bateaux sans permis, équipés d'un taud de soleil. De 4 à 8 places, parfaits pour les sorties en famille ou entre amis. Les explications de conduite et de sécurité vous seront données avant le départ pour une navigation simple et sécurisée.</p>
+                <p>Départ de Kako Beach, de la plage Chabassol, pour une aventure de 2 heures dans les Gorges du Verdon. Prévoyez une tenue adaptée, des protections solaires, une collation et de l'eau. De plus, une buvette est à votre disposition pour acheter des boissons fraîches. Des poubelles sont disponibles sur la plage. Profitez de cette expérience unique au cœur de la nature préservée.</p>
                 <p class="about_msg">*Nous sommes heureux de vous informer que les clientes de la Ferme Rose pourront profiter d'un tarif préférentiel exclusif lors de leur visite à Kako's Beach. Votre expérience est notre priorité, et nous sommes ravis de vous offrir cette offre spéciale pour rendre votre journée encore plus mémorable. À noter que nous n'acceptons pas de réservations.</p>
             </div>
             <div class="beach-gallery_wrapper">
