--- a/assets/view/kako-bistrot.html
+++ b/assets/view/kako-bistrot.html
@@ -51,6 +51,9 @@
                         <p>Au bistrot de la ferme rose qui se situe coeur du village de Moustiers-Sainte-Marie</p>
                         <p>une belle ambiance autour d'un verre de vin ou d'une coupe de champagne, à l'écart du tumulte touristique, profitez de votre soirée pour vous décontracter sur la terrasse.</p>
                         <p>Dans un beau décor du siècle dernier. L'escalier conçu par Roger Talon, une véritable pièce maîtresse du Musée d'Art Moderne de New York et le bar du 19ème siècle : un comptoir d'étang magnifiquement préservé. </p>
+                        <p>En vous rendant au bistrot de la ferme rose, vous serez chaleureusement accueillis par Frederic et Vanessa, qui veilleront à rendre votre visite inoubliable. </p>
+                        <p><a href="/assets/doc/Menu Kako's Bistrot - Bar à vins et Champagne-1.pdf" target="_blank">Consulter notre carte</a></p> 
+
                     </div>
                     <div class="story-col right-col">
                         <div class="story-carousel carousel-wrap">
@@ -61,25 +64,22 @@
                                 <div class="carousel__track-container">
                                     <ul class="carousel__track">
                                         <li class="carousel__slide current-slide">
-                                            <img class="carousel__image" src="/assets/img/gallery-story/facade-bistrot-1.1.jpg" alt="">
+                                            <img class="carousel__image" src="/assets/img/bistrot-gallery/bistrot-facade.png" alt="">
                                         </li>
                                         <li class="carousel__slide">
-                                            <img class="carousel__image" src="/assets/img/gallery-story/bistrot-Escalier-1.jpg" alt="">
+                                            <img class="carousel__image" src="/assets/img/bistrot-gallery/bistrot-Escalier-1.jpg" alt="">
                                         </li>
                                         <li class="carousel__slide">
-                                            <img class="carousel__image" src="/assets/img/gallery-story/bistrot-escalier-2.jpg" alt="">
+                                            <img class="carousel__image" src="/assets/img/bistrot-gallery/bistrot-stairs.png" alt="">
                                         </li>
                                         <li class="carousel__slide">
-                                            <img class="carousel__image" src="/assets/img/gallery-story/bistrot-3.jpg" alt="">
+                                            <img class="carousel__image" src="/assets/img/bistrot-gallery/bistrot-terrace.png" alt="">
                                         </li>
                                         <li class="carousel__slide">
-                                            <img class="carousel__image" src="/assets/img/gallery-story/bistrot-4.jpg" alt="">
+                                            <img class="carousel__image" src="/assets/img/bistrot-gallery/bistrot-leather-strapontin.png" alt="">
                                         </li>
                                         <li class="carousel__slide">
-                                            <img class="carousel__image" src="/assets/img/gallery-story/balcon-bistrot-5.jpg" alt="">
-                                        </li>
-                                        <li class="carousel__slide">
-                                            <img class="carousel__image" src="/assets/img/gallery-story/Balcon-bistrot-6.jpg" alt="">
+                                            <img class="carousel__image" src="/assets/img/bistrot-gallery/bistrot-terrace-champagne.png" alt="">
                                         </li>
                                     </ul>
                                 </div>
@@ -104,9 +104,9 @@
         </div>
         <section class="bistrot-gallery">
             <div class="bistrot-gallery_wrapper">
-                <img src="/assets/img/bar-bistrot.jpg" alt="">
-                <img src="/assets/img/Balcon-bistrot.jpg" alt="">
-                <img src="/assets/img/etage-bistrot.jpg" alt="">
+                <img src="/assets/img/bistrot/bistrot-bar-staff.png" alt="">
+                <img src="/assets/img/bistrot/bistrot-balcon-tabouret.png" alt="">
+                <img src="/assets/img/bistrot/bistrot-balcon-saxo.png" alt="">
             </div>
         </section>
        
@@ -114,7 +114,7 @@
             <div class="bistrot-info">
                 <h3>Horaires:</h3>
                 <p>Lundi au Dimanche 17h - 1h</p>
-                <a href="/assets/doc/Menu Kako's Bistrot - Bar à vins et Champagne-1.pdf" target="_blank" class="btn">Voir la carte</a>
+                <a href="/assets/view/bistrot-official.html" target="_blank" class="btn">En savoir plus</a>
             </div>
         </section>
         <div class="position">
