--- a/scss/pages/_bistrot.scss
+++ b/scss/pages/_bistrot.scss
@@ -1,7 +1,7 @@
 .hero-bistrot {
     min-height: 70vh;  
-    background-image: url(/assets/img/facade2.jpg);
-    background-position: bottom;
+    background-image: linear-gradient(rgba(20, 20, 20, 0.261)), url(/assets/img/bistrot-gallery/bistrot-terrace.png);
+    background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
