--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,7 +12,10 @@
 @import 'pages/gallery';
 @import 'pages/bistrot';
 @import 'pages/beach';
+// @import 'pages/about';
+@import 'pages/bis-official';
 
 @import 'components/card';
 @import 'components/button';
 @import 'components/carousel';
+@import 'components/modal';
