--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -23,7 +23,7 @@ $accent-color-fade: lighten($accent-color, 38%);
 
 $logo-font: 'Nunito', sans-serif;
 $title-font: 'Inter', sans-serif;
-
+$bis-font:'Neuton', serif;
 
 $main-font: 'Tinos', serif;
 
