--- a/scss/pages/_about.scss
+++ b/scss/pages/_about.scss
@@ -76,3 +76,48 @@ nav {
   .hide {
     width: 100%;
   }
+
+
+
+
+
+  img {
+    max-width: 100%;
+    height: auto;
+    vertical-align: middle;
+    display: inline-block;
+  }
+  
+  /* Main CSS */
+  // .photo_grid > div {
+  //   display: flex;
+  //   justify-content: center;
+  //   align-items: center;
+  // }
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+  }
+  
+  // .photo_grid {
+  //   display: grid;
+  //   grid-gap: 10px;
+  //   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  //   grid-auto-rows: 200px;
+  //   grid-auto-flow: dense;
+  // }
+  .photo_grid .wide {
+    grid-column: span 2;
+  }
+  .photo_grid .tall {
+    grid-row: span 2;
+  }
+  .photo_grid .big {
+    grid-column: span 2;
+    grid-row: span 2;
+  }
+
+  ///////////////////////
+  
