--- a/assets/view/bistrot-official.html
+++ b/assets/view/bistrot-official.html
@@ -75,7 +75,7 @@
                 <div class="photo-grid_wrapper">
                      <img src="/assets/img/bis-official/bistrot-balcon-tabouret-coussin-rouge.png" alt="">
                  </div> 
-                <div class="photo-grid_wrapper">
+                <div class="photo-grid_wrapper desktop">
                     <img src="/assets/img/bis-official/bistrot-terrace-champagne.png" alt="">
                 </div>
             </div>
