--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2042,6 +2042,7 @@ header:hover .logo-name {
 }
 
 .photo {
+  border: 1px solid red;
   background-color: #eedfd2;
   height: 100vh;
   display: -webkit-box;
@@ -2065,13 +2066,14 @@ header:hover .logo-name {
 }
 
 .photo_grid {
+  border: 1px solid red;
   width: 80vw;
   display: -ms-grid;
   display: grid;
   grid-gap: 10px;
-  -ms-grid-columns: (minmax(18rem, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
-  grid-auto-rows: 17rem;
+  -ms-grid-columns: (minmax(17rem, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(17rem, 1fr));
+  grid-auto-rows: 15rem;
   grid-auto-flow: dense;
 }
 
@@ -2086,6 +2088,182 @@ header:hover .logo-name {
 .photo_grid .big {
   grid-column: span 2;
   grid-row: span 2;
+}
+
+.modal {
+  display: none;
+  /* Hidden by default */
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
+  top: 0;
+  right: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: black;
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.9);
+  /* Black w/ opacity */
+  -webkit-animation: zoom 0.3s ease-in-out;
+          animation: zoom 0.3s ease-in-out;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+@-webkit-keyframes zoom {
+  from {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  to {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes zoom {
+  from {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  to {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+/* Modal Content (Image) */
+.modal-content.bis-modal {
+  width: 50%;
+  height: 80%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+/* The Close Button */
+.closeBtn {
+  position: absolute;
+  top: 2rem;
+  right: 2rem;
+  color: rgba(241, 241, 241, 0.87);
+  font-size: 2.5rem;
+  font-weight: bold;
+  z-index: 90;
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+  cursor: pointer;
+}
+
+.closeBtn:hover {
+  color: #f1f1f1;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  scale: 1.5;
+}
+
+.prevButton, .nextButton {
+  position: absolute;
+  top: 50%;
+  color: rgba(241, 241, 241, 0.87);
+  font-size: 2.5rem;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
+
+.prevButton:hover, .nextButton:hover {
+  color: #f1f1f1;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  scale: 1.5;
+}
+
+.prevButton {
+  left: 22%;
+}
+
+.nextButton {
+  right: 22%;
+}
+
+/* 100% Image Width on Smaller Screens */
+@media only screen and (max-width: 700px) {
+  .modal-content {
+    width: 100%;
+  }
+}
+
+@media (max-width: 1600px) {
+  .photo_grid {
+    -ms-grid-columns: (minmax(13rem, 1fr))[auto-fit];
+        grid-template-columns: repeat(auto-fit, minmax(13rem, 1fr));
+    grid-auto-rows: 15rem;
+  }
+}
+
+@media (max-width: 1400px) {
+  .photo_grid {
+    -ms-grid-columns: (minmax(10rem, 1fr))[auto-fit];
+        grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+    grid-auto-rows: 15rem;
+  }
+  .photo_grid .desktop {
+    grid-column: span 2;
+  }
+  .prevButton {
+    left: 23%;
+  }
+  .nextButton {
+    right: 23%;
+  }
+}
+
+@media (max-width: 1052px) {
+  .photo_grid {
+    -ms-grid-columns: (minmax(10rem, 1fr))[auto-fit];
+        grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+    grid-auto-rows: 13rem;
+  }
+  .photo_grid .desktop {
+    grid-column: span 2;
+  }
+  .prevButton {
+    left: 23%;
+  }
+  .nextButton {
+    right: 23%;
+  }
+}
+
+@media (max-width: 850px) {
+  .photo_grid {
+    width: 90vw;
+    -ms-grid-columns: (minmax(9rem, 1fr))[auto-fit];
+        grid-template-columns: repeat(auto-fit, minmax(9rem, 1fr));
+    grid-auto-rows: 13rem;
+  }
+  .photo_grid .desktop {
+    grid-column: span 2;
+  }
+  .prevButton {
+    left: 23%;
+  }
+  .nextButton {
+    right: 23%;
+  }
 }
 
 .bis-contact_info {
@@ -2437,128 +2615,5 @@ header:hover .logo-name {
 
 .is-hidden {
   display: none;
-}
-
-.modal {
-  display: none;
-  /* Hidden by default */
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  position: fixed;
-  /* Stay in place */
-  z-index: 1;
-  /* Sit on top */
-  top: 0;
-  right: 0;
-  width: 100%;
-  /* Full width */
-  height: 100%;
-  /* Full height */
-  overflow: auto;
-  /* Enable scroll if needed */
-  background-color: black;
-  /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.9);
-  /* Black w/ opacity */
-  -webkit-animation: zoom 0.3s ease-in-out;
-          animation: zoom 0.3s ease-in-out;
-  -webkit-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
-}
-
-@-webkit-keyframes zoom {
-  from {
-    -webkit-transform: scale(0);
-            transform: scale(0);
-  }
-  to {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-  }
-}
-
-@keyframes zoom {
-  from {
-    -webkit-transform: scale(0);
-            transform: scale(0);
-  }
-  to {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-  }
-}
-
-/* Modal Content (Image) */
-.modal-content {
-  width: 50%;
-  height: 80%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-.modal-content.bis-modal {
-  height: 55rem;
-  width: 50rem;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-/* The Close Button */
-.closeBtn {
-  position: absolute;
-  top: 2rem;
-  right: 2rem;
-  color: rgba(241, 241, 241, 0.87);
-  font-size: 2.5rem;
-  font-weight: bold;
-  z-index: 90;
-  -webkit-transition: 0.3s ease-in-out;
-  transition: 0.3s ease-in-out;
-  cursor: pointer;
-}
-
-.closeBtn:hover {
-  color: #f1f1f1;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-  scale: 1.5;
-}
-
-.prevButton, .nextButton {
-  position: absolute;
-  top: 50%;
-  color: rgba(241, 241, 241, 0.87);
-  font-size: 2.5rem;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-  cursor: pointer;
-}
-
-.prevButton:hover, .nextButton:hover {
-  color: #f1f1f1;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-  scale: 1.5;
-}
-
-.prevButton {
-  left: 22%;
-}
-
-.nextButton {
-  right: 22%;
-}
-
-/* 100% Image Width on Smaller Screens */
-@media only screen and (max-width: 700px) {
-  .modal-content {
-    width: 100%;
-  }
 }
 /*# sourceMappingURL=style.css.map */
